--- a/packages/ui/turbo/generators/templates/component.hbs
+++ b/packages/ui/turbo/generators/templates/component.hbs
@@ -1,4 +1,5 @@
-import * as React from "react";
+import * as React from 'react';
+import styles from '../styles/{{ pascalCase name }}.module.scss';
 
 interface Props {
   children?: React.ReactNode;
