Replaced Footer component text with BBC logo and added basic styling

--- a/packages/ui/src/styles/Footer.module.scss
+++ b/packages/ui/src/styles/Footer.module.scss
@@ -1,3 +1,10 @@
 .container {
-  width: 100%;
+  display: grid;
+  place-content: center;
+  padding: 0.5rem 1rem;
+  background-color: black;
+}
+
+.logo {
+  height: 2rem;
 }
