--- a/apps/web/src/styles/pages/ArticlesPage.module.scss
+++ b/apps/web/src/styles/pages/ArticlesPage.module.scss
@@ -3,6 +3,8 @@
   margin: 0;
   padding: 1rem;
   background-color: white;
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 1.25rem;
   box-shadow: 0 0 0.75rem 0 rgba(0, 0, 0, 0.1);
 }
 
