Adjusted horizontal-rule color

--- a/apps/web/src/styles/components/ArticleCard.module.scss
+++ b/apps/web/src/styles/components/ArticleCard.module.scss
@@ -17,6 +17,10 @@
   font-size: 1.125rem;
 }
 
+.horizontal-rule {
+  border-color: rgba(0, 0, 0, 0.1);
+}
+
 .table {
   width: 100%;
   table-layout: fixed;
